# aletheia

./: .clippy.toml  .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  ALETHEIA-HANDOVER.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSSREPO-HANDOVER.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  FINAL_SUMMARY.md  HANDOVER.scm  LICENSE-MIT.txt  LICENSE-PALIMPSEST.txt  LICENSE.txt  MAINTAINERS.md  META.scm  PROJECT_STATUS.md  README.adoc  README.md  ROADMAP.md  RSR-CONFORMITY.md  SECURITY.md  STATE.scm  flake.nix  justfile
.github/workflows/: aletheia.yml  codeql.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  humans.txt  security.txt
benches/: verification_benchmark.rs
conformance/: ECHIDNA-CONFORMANCE.md  OIKOS-CONFORMANCE.md  PALIMPSEST-CONFORMANCE.md  README.md  RSR-CONFORMANCE.md
docs/: ARCHITECTURE.md  FAQ.md  PRIORITIES.md  QUICK_START.md  RSR-SPECIFICATION.md  VALUE-CHAIN-POLICY.md
examples/: simple_verification.rs
extraction/rhodibot/: .gitlab-ci.yml  Cargo.toml  README.md  justfile
extraction/rhodibot/.github/workflows/: ci.yml
extraction/rhodibot/.well-known/: ai.txt  humans.txt  security.txt
extraction/rhodibot/src/: bot.rs  lib.rs  main.rs
extraction/rhodibot/tests/: integration_tests.rs
extraction/rhodium-pipeline/: Cargo.toml  README.md
extraction/rhodium-pipeline/src/: lib.rs  main.rs
src/: main.rs
tests/: integration_tests.rs
