[package]
name = "aletheia"
version = "0.1.0"
edition = "2021"
authors = ["MAA Framework Contributors"]
license = "MIT OR Palimpsest-0.8"
description = "RSR compliance verification tool - truth in repository standards"
repository = "https://gitlab.com/maa-framework/6-the-foundation/aletheia"
keywords = ["verification", "compliance", "rsr", "security", "standards"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[dependencies]
# Zero dependencies for Bronze-level RSR compliance
# All functionality implemented using std library only

[dev-dependencies]
# Zero dev dependencies - tests use std only

[[bin]]
name = "aletheia"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
